<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >
    
   	<TextView   
     	android:id="@+id/textViewQuestion" 
     	android:layout_width="wrap_content"
     	android:layout_height="wrap_content" 
     	android:gravity="center" 
     	android:padding="24dp" 
     	android:textSize="24sp" /> 
    
    <RadioGroup  
     	android:id="@+id/radioGroup" 
     	android:layout_width="wrap_content" 
    	android:layout_height="wrap_content" 
     	android:orientation="horizontal" > 
    
    	<RadioButton 
    		android:layout_width="wrap_content" 
    		android:layout_height="wrap_content" 
    		android:layout_margin="5dp" 
    		android:background="@drawable/custom_button_rect" 
     		android:button="@android:color/transparent" 
     		android:text="@string/yes" 
     		android:textColor="@drawable/custom_button_text_color" 
     		android:textStyle="bold" /> 
     	<RadioButton 
    		android:layout_width="wrap_content" 
    		android:layout_height="wrap_content" 
     		android:layout_margin="5dp" 
    		android:background="@drawable/custom_button_rect" 
     		android:button="@android:color/transparent" 
    		android:text="@string/no" 
    		android:textColor="@drawable/custom_button_text_color" 
     		android:textStyle="bold" /> 
     </RadioGroup> 
     
     <Button 
     		android:id="@+id/buttonNext" 
   			android:layout_width="wrap_content" 
     		android:layout_height="wrap_content" 
     		android:enabled="false" 
     		android:text="@string/next" /> 
    
</LinearLayout>
